[gd_scene load_steps=4 format=3 uid="uid://co7b7r8yfoopv"]

[ext_resource type="Script" path="res://script/menu_main.gd" id="2"]
[ext_resource type="FontFile" uid="uid://bvusmh2nhlu2n" path="res://font/LibreBaskerville-Bold.ttf" id="2_d4bap"]
[ext_resource type="FontFile" uid="uid://doouxwvmivwne" path="res://font/LibreBaskerville-Regular.ttf" id="3_ukewc"]

[node name="MenuMain2" type="Node2D"]
script = ExtResource("2")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_d4bap")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[center]What The Witness?[/center]"

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("3_ukewc")
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "A fan game of The Witness by Alith
v1.05"

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start / Continue"

[node name="SettingButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="CustomLevelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Custom Levels"

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingButton" to="." method="_on_SettingButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CustomLevelButton" to="." method="_on_custom_level_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CreditsButton" to="." method="_on_CreditsButton_pressed"]
